# headsdown-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  contract-smoke.yml  release.yml
homebrew/: hd.rb
src/: auth.rs  client.rs  config.rs  format.rs  main.rs  telemetry.rs
src/commands/: alias.rs  auth.rs  autoresponder.rs  availability.rs  calibration_cmd.rs  digest.rs  doctor.rs  grants.rs  hooks.rs  integrations.rs  interrupt.rs  mod.rs  mode.rs  outcome.rs  override_cmd.rs  presets.rs  proposals.rs  status.rs  telemetry_cmd.rs  update.rs  verdict.rs  verdict_settings.rs  watch.rs  whoami.rs  windows.rs
src/contract/: availability.rs  calls.rs  mod.rs
tests/: backend_parity.rs  graphql_contract.rs  integration.rs
